Fixed project dependencies.